# NppFTP

./: .gitignore  .travis.yml  BUILDING  BUILDING.md  CMakeLists.txt  ISSUE_TEMPLATE.md  Makefile  Makefile.mingw  Makefile.msvc  Makefile64.mingw  README.md  TODO.txt  appveyor.yml  build.mk  build_3rdparty - 111a.py  build_3rdparty - Kopie.py  build_3rdparty.py  build_3rdparty_64bit.py  build_windows_from_vs_shell  cmake_toolchain-mingw-w64-ubuntu.cmake  index.html  index.md  libssh-0.6.4.patch  libssh-0.6.5.patch  mingw-w64-cross-compile.cmake  params.json  project.spdx.json  project.spdx.yml
.github/: dependabot.yml
.github/workflows/: CI_build.yml  spdx_upload.yml
Npp/: Notepad_plus_msgs.h
NppFTP/: NppFTP.sln
NppFTP/NppFTP/: NppFTP.vcxproj  NppFTP.vcxproj.filters
UTCP/Include/: UTDataSource.h  UTExtErr.h  UT_Queue.h  ftp_c.h  stdafx.h  uh_ctrl.h  ut_clnt.h  ut_strop.h  uterr.h  utfile.h  utstrlst.h
UTCP/cb/: UTCP.cbp
UTCP/include/: UTDataSource.h  UTExtErr.h  UT_AccessControl.h  UT_CriticalSection.h  UT_Queue.h  ftp_c.h  stdafx.h  uh_ctrl.h  ut_clnt.h  ut_strop.h  uterr.h  utfile.h  utstrlst.h
UTCP/source/: UTDataSource.cpp  UT_StrOp.cpp  ftp_c.cpp  uh_ctrl.cpp  ut_CramMd5.cpp  ut_clnt.cpp  utfile.cpp  utstrlst.cpp
UTCP/src/: UTDataSource.cpp  UT_Queue.cpp  UT_StrOp.cpp  ftp_c.cpp  uh_ctrl.cpp  ut_clnt.cpp  utfile.cpp  utstrlst.cpp
_layouts/: default.html
cb/: NppFTP.cbp  NppFTP.workspace
doc/: Readme.txt  license_UTCP.htm  license_libssh.txt
docs/: index.md  license_OpenSSL.txt  license_TiXML.txt  license_ZLIB.txt
docs/_layouts/: default.html
include/: Encryption.h  FTPClientWrapper.h  FTPFile.h  FTPProfile.h  FTPQueue.h  FTPSession.h  FTPSettings.h  FileObject.h  Monitor.h  QueueOperation.h  SSLCertificates.h  StdInc.h  WinPlatform.h
include/Windows/: ChildDialog.h  FTPWindow.h  InputDialog.h  Toolbar.h  Treeview.h  resource.h  symbols.h
include/libssh/: libssh.h  poll.h  session.h  socket.h  wrapper.h
include/nppftp/: ChildDialog.h  DragDropSupport.h  Encryption.h  FTPCache.h  FTPClientWrapper.h  FTPFile.h  FTPProfile.h  FTPQueue.h  FTPSession.h  FileObject.h  NppFTP.h  Output.h  PathUtils.h  ProgressMonitor.h  QueueOperation.h  RefObject.h  StdInc.h  StringUtils.h
include/nppftp/Windows/: AboutDialog.h  Commands.h  Dialog.h  DockableWindow.h  FTPWindow.h  InputDialog.h  KBIntDialog.h  OutputWindow.h  ProfilesDialog.h  QueueWindow.h  SettingsDialog.h  Treeview.h  Window.h  resource.h  symbols.h  symbolsA.h  symbolsU.h
include/openssl/: opensslconf.h
libssh-0.4.2/cb/: libssh.cbp
libssh-0.4.2/include/libssh/: misc.h  priv.h
libssh-0.4.2/libssh/: agent.c  auth.c  channels.c  channels1.c  client.c  config.c  kex.c  keyfiles.c  keys.c  misc.c  options.c  packet.c  pcap.c  poll.c  session.c  sftp.c  socket.c  wrapper.c
libssh-0.4.4/cb/: libssh.cbp
libssh-0.4.4/include/: config.h
libssh-0.4.4/include/libssh/: libssh.h  poll.h  session.h  socket.h
libssh-0.4.4/libssh/: channels.c  client.c  config.c  connect.c  options.c  poll.c  server.c  socket.c
src/: DragDropSupport.cpp  DragDropSupport.h  Encryption.cpp  FTPCache.cpp  FTPCache.h  FTPClientWrapper.cpp  FTPClientWrapper.h  FTPClientWrapperSSH.cpp  FTPClientWrapperSSL.cpp  FTPClientWrapperZOS.cpp  FTPFile.h  FTPProfile.cpp  FTPProfile.h  FTPQueue.cpp  FTPSession.cpp  FTPSession.h  FTPSettings.cpp  FTPSettings.h  FTPTest.cpp  FileObject.cpp  FileObject.h  Monitor.cpp  NppFTP.cpp  NppFTP.h  Output.cpp  Output.h  PathUtils.cpp  PluginInterface.cpp  ProgressMonitor.cpp  QueueOperation.cpp  QueueOperation.h  RefObject.cpp  SSLCertificates.cpp  StdInc.h  StringUtils.cpp  StringUtils.h  WinPlatform.cpp
src/Windows/: AboutDialog.cpp  AboutDialog.h  ChildDialog.cpp  ChildDialog.h  Commands.h  Dialog.cpp  Dialog.h  DockableWindow.cpp  DockableWindow.h  DragDropWindow.cpp  DragDropWindow.h  FTPWindow.cpp  FTPWindow.h  InputDialog.cpp  InputDialog.h  KBIntDialog.cpp  KBIntDialog.h  MessageDialog.cpp  MessageDialog.h  NppFTP.rc  OutputWindow.cpp  OutputWindow.h  ProfileObject.cpp  ProfileObject.h  ProfilesDialog.cpp  ProfilesDialog.h  ProfilesWindow.cpp  ProfilesWindow.h  QueueWindow.cpp  QueueWindow.h  SettingsDialog.cpp  SettingsDialog.h  Toolbar.cpp  Treeview.cpp  Treeview.h  Window.cpp  Window.h  resource.h  symbols.h
tinyxml/cb/: TinyXML.cbp
zlib/cb/: zlib.cbp
